2005-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: Keep agent window on top. 
    Patch by Adam Schreiber. Fixes bug #301842
    * libseahorse/Makefile.am: 
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-keyserver-control.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-server-source.h: Dialog for adding key servers
    in preferences, validate key server uris (bug #159918)
    
2005-04-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager-store.c: Fix strange gconf crasher.
    
2005-04-21  Bastien Nocera  <hadess@hadess.net>

    * libseahorse/Makefile.am: fix build when WITH_HKP isn't defined

2005-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * configure.in:
    * data/seahorse.schemas.in: 
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gpgmex-util.c: 
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-hkp-source.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: HKP Key Server support (bug #172757)
    * agent/seahorse-agent-io.c: Cleanup some warnings
    
2005-04-18  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Fixed problem with disabled
    search button (bug #300578)
    
2005-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-check-button-control.h: Add proper license
    * configure.in:
    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c:
    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-gconf.c: