@@ -1,3 +1,12 @@
+2005-04-26  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * agent/seahorse-agent-actions.c:
+    * agent/seahorse-agent-cache.c:
+    * agent/seahorse-agent-prompt.c:
+    * agent/seahorse-agent.h: Add option in agent 'Authorize' window
+    to turn of authorize prompting. 
+    Patch by Adam Schreiber. Fixes bug #302112
+    
 2005-04-24  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-prompt.c: Keep agent window on top. 
